@@ -13,6 +13,7 @@ Bug fixes:
 * Updated rake manpage.  Pull request #291 by skittleys.
 * Add Rake::LATE to allow rebuilding of files that depend on deleted files.
   Bug #286, pull request #287 by David Grayson.
+* Fix relinking of files when repackaging.  Bug #276 by Muenze.
 
 === 10.3.3
 
